--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <title>Ultra Racing Schedule</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!--<link rel="stylesheet" href="styles.css">-->
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="main.css">
         <!-- 1. Load libraries -->
         <!-- Polyfill for older browsers -->
         <script src="node_modules/core-js/client/shim.min.js"></script>
